[gd_scene load_steps=6 format=2]

[ext_resource path="res://grafika/linia.png" type="Texture" id=1]
[ext_resource path="res://src/poziomy/Level_class.gd" type="Script" id=2]
[ext_resource path="res://grafika/back.png" type="Texture" id=3]
[ext_resource path="res://grafika/move_off.png" type="Texture" id=4]
[ext_resource path="res://grafika/strefa_nacisku.png" type="Texture" id=5]

[node name="Level_class" type="Node2D"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 400.0
margin_bottom = 712.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="TouchScreenButton" parent="."]
position = Vector2( 28.9264, 653.541 )
scale = Vector2( 1.2, 1.2 )
normal = ExtResource( 3 )
pressed = ExtResource( 3 )

[node name="move" type="TouchScreenButton" parent="."]
position = Vector2( 311.512, 651.324 )
scale = Vector2( 0.809557, 0.792243 )
normal = ExtResource( 4 )
pressed = ExtResource( 4 )

[node name="plak" type="TouchScreenButton" parent="."]
position = Vector2( 8, 24 )
scale = Vector2( 1.04444, 1.208 )
normal = ExtResource( 5 )
pressed = ExtResource( 5 )
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="move" to="." method="_on_move_pressed"]
[connection signal="pressed" from="plak" to="." method="_on_plak_pressed"]
[connection signal="released" from="plak" to="." method="_on_plak_released"]
